--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mx.unam.saic.puntoycoma">
+    package="mx.unam.saic.puntoycoma" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".controladores.PuntoYComa"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name=".controladores.PuntoYComa"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".controladores.SplashScreen"
@@ -24,16 +26,25 @@
             android:name=".controladores.MainActivity"
             android:label="@string/app_name" />
 
-        <meta-data android:name="com.google.android.gms.version"
-                   android:value="@integer/google_play_services_version" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity"/>
-		<activity android:name=".controladores.Registro"
-                android:parentActivityName=".controladores.MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                        android:value=".controladores.MainActivity"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
 
-		</activity>
+        <activity android:name="com.facebook.LoginActivity" />
+        <activity
+            android:name=".controladores.Registro"
+            android:parentActivityName=".controladores.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".controladores.MainActivity" />
+        </activity>
+        <activity
+            android:name=".controladores.ActivityPuntoYComa"
+            android:label="@string/title_activity_activity_punto_ycoma" >
+        </activity>
     </application>
 
 </manifest>
